--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "cypress-localstorage-commands": "^1.4.1",
     "faker": "^5.4.0",
     "standardjs": "^1.0.0-alpha"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/wlsf82/curso-cypress-avancado/issues"
+  },
+  "dependencies": {}
 }
