--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Projeto do curso avançado de Cypress da Escola TAT",
   "main": "index.js",
+  "browserslist": [
+    "defaults and supports es6-module",
+    "maintained node versions"
+  ],
   "scripts": {
     "lint": "npx standard",
     "lint:fix": "npx standard --fix",
@@ -36,5 +40,8 @@
     "cypress-localstorage-commands": "^1.4.1",
     "faker": "^5.4.0",
     "standardjs": "^1.0.0-alpha"
+  },
+  "dependencies": {
+    "browserslist": "^4.21.5"
   }
 }
